Use Duration for shardLeaderElectionTimeout
Use java.time.Duration instead of org.apache.pekko.util.Timeout, which
allows us to use CompletionStage-based API, eliminating a few users of
OnComplete. Only AbstractDatastore needs an explicit conversion to
Scala.

While this does not touch ActorUtils, it does set the stage for its
further improvements.

JIRA: CONTROLLER-2180
Change-Id: I87ef88537f943a35deae617b48968a9de2274b8a
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>